add flask factory pattern, with test framework

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Terraform
-*/.terraform/
-*.lock*
+*.terraform/
+*terraform/*/.terraform.lock.hcl
 *.destroy*
 *.tfstate*
+
+# pytest
+.pytest_cache
